[tool.poetry]
name = "pdf-assistant"
version = "0.1.0"
description = ""
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain-text-splitters = "^0.3.4"
langchain-community = "^0.3.14"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
ipykernel = "^6.29.5"
langchain-core = "^0.3.29"
beautifulsoup4 = "^4.12.3"
pypdf = "^5.1.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
